# linux-visualizator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cinnamon-desklet/: README.md  build-spices-package.sh  install.sh  uninstall.sh
cinnamon-desklet/linux-visualizator@KoDiK2005/: desklet.js  metadata.json  settings-schema.json
core/: config.py  models.py  sampler.py
core/collectors/: cpu.py  disk.py  gpu.py  memory.py  network.py
scripts/: install_autostart.sh  uninstall_autostart.sh
tests/: test_collectors.py  test_gpu_collector.py
ui/: app.py
ui/widget/: animation.py  app_settings.py  main_window.py  settings_dialog.py  severity.py  theme.py
ui/widget/panels/: cpu_panel.py  disk_io_panel.py  disk_usage_panel.py  gpu_panel.py  mem_panel.py  net_panel.py  sparkline_panel.py
