[project]
name = "linux-visualizator"
version = "0.1.0"
description = "Десктопный виджет, визуализирующий работу Linux-системы в реальном времени"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "ui*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
